# listing2content

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: pyproject.toml  spike_cerebras.py
backend/app/: auth.py  db.py  main.py
backend/tests/: test_auth.py
docs/: PLAN.md
frontend/: README.md
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
