[project]
name = "backend"
version = "0.1.0"
description = "Listing2Content backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.139.2",
    "litellm<1.92",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
